# wmtscheduler-sync

./: .gitignore  LICENSE  README.md  model.py  pdf_regex_finder.py  pyproject.toml  quickimport.py  sync.py
